# agentic_content_creator_2

./: .gitignore  README.md  content_plan.md  content_research.md  pyproject.toml
output/: Timeline_of_AGI.md  linkedin_post_timeline_of_agi_1.md  linkedin_post_timeline_of_agi_2.md  linkedin_post_timeline_of_agi_3.md  linkedin_post_timeline_of_agi_4.md  linkedin_post_timeline_of_agi_5.md  linkedin_post_timeline_of_agi_6.md  linkedin_post_timeline_of_agi_7.md  linkedin_post_timeline_of_agi_8.md  linkedin_post_timeline_of_agi_9.md  linkedin_posts_timeline_of_agi_all.md
src/agentic_content_creator/: config.py  main.py
src/agentic_content_creator/crews/content_crew/: content_crew.py  main.py
src/agentic_content_creator/crews/content_crew/config/: agents.yaml  tasks.yaml
src/agentic_content_creator/crews/research_crew/: research_crew.py
src/agentic_content_creator/crews/research_crew/config/: agents.yaml  tasks.yaml
