[project]
name = "agentic_content_creator"
version = "0.1.0"
description = "agentic_content_creator using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.76.2,<1.0.0",
]

[project.scripts]
kickoff = "agentic_content_creator.main:kickoff"
plot = "agentic_content_creator.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
